src/objects/QIPP_Benefit_Conversion_Table__c.object
<CustomObject>
    <description>Custom Object &quot;Benefit Convesion Table&quot; for QIPP Application</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To determine whether conversion table is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Type_Override__c</fullName>
        <label>Benefit Type - Override</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>SCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PaCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLATFORMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Please select the appropriate Business Unit</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Customer Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCFO Group CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS Global Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;C Legal &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBB Mobile Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA Marketing and Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;I Technology &amp; Innovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoPQ_Reduction_Conversion_Rate__c</fullName>
        <inlineHelpText>Output in k€</inlineHelpText>
        <label>CoPQ Reduction Conversion Rate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoPQ_Type__c</fullName>
        <label>Financial Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Financial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <label>Current Rate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Directional_Indicator__c</fullName>
        <label>Directional Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Lower is Favorable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Higher is Favorable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Examples__c</fullName>
        <label>Examples</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Examples_del__c</fullName>
        <description>Examples that demonstrate the usage of this particular Improvement Measure</description>
        <inlineHelpText>Please specify examples that demonstrate the usage of this particular Improvement Measure</inlineHelpText>
        <label>Examples</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Impact_Calculation_Driver__c</fullName>
        <label>Financial Impact Calculation Driver</label>
        <picklist>
            <picklistValues>
                <fullName>NCDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Failures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Overrun due to Quality Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional HW and/or SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Type_Override__c</fullName>
        <label>Financial Type - Override</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_P_L_Line_Override__c</fullName>
        <label>Impacted P/L Line - Override</label>
        <picklist>
            <picklistValues>
                <fullName>Cost of Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_P_L_Line__c</fullName>
        <label>Impacted P/L Line</label>
        <picklist>
            <controllingField>CoPQ_Type__c</controllingField>
            <picklistValues>
                <fullName>R&amp;D Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost of Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure_Grouping__c</fullName>
        <label>Improvement Measure Grouping</label>
        <picklist>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoPQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS GSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS Overall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPS/GPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure_Short_Name__c</fullName>
        <description>A short name or acronym for this Improvement Measure</description>
        <inlineHelpText>A short name or acronym for this Improvement Measure</inlineHelpText>
        <label>Improvement Measure – Short Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure_Unique__c</fullName>
        <description>This field is used to maintain uniqueness on the &quot;QIPP Benefit Conversion Table&quot; object</description>
        <label>Improvement Measure - Unique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Monetization_Calculation_Method__c</fullName>
        <label>Monetization Calculation Method</label>
        <picklist>
            <controllingField>Benefit_Type__c</controllingField>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_CoPQ_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Impacted Measurement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Benefit_Conversion_Table__c</referenceTo>
        <relationshipName>Conversion_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts per Million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Improvement Measure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Benefit_Type__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>CoPQ_Type__c</columns>
        <columns>Monetization_Calculation_Method__c</columns>
        <columns>Impacted_P_L_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Improvement Measure (KPI)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Improvement Measures</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Rule_on_copq_reduction_conversion_rate</fullName>
        <active>true</active>
        <errorConditionFormula>NoT(ISPICKVAL(Financial_Impact_Calculation_Driver__c , &apos;NCDR&apos;) ||ISPICKVAL( Financial_Impact_Calculation_Driver__c , &apos;Internal Failures&apos;))&amp;&amp; CoPQ_Reduction_Conversion_Rate__c != 1.00</errorConditionFormula>
        <errorDisplayField>CoPQ_Reduction_Conversion_Rate__c</errorDisplayField>
        <errorMessage>Value for this field should be 1 - as there is no conversion required.</errorMessage>
    </validationRules>
</CustomObject>